// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly for a basic input 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c1:focus:not(:focus-visible) {
  outline: none;
}

.c3 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
}

.c3:focus:not(:focus-visible) {
  outline: none;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.c2 {
  border: 1px solid #bdbdbd;
  box-shadow: inset 0px 1px 2px #e5e5e5;
  border-radius: 0.2em;
  height: 2.5em;
  width: 100%;
  padding: 0.4em 0.6em;
}

.c2[disabled] {
  background-color: #f2f2f2;
  box-shadow: unset;
  color: #8d8d8d;
}

.c2:focus {
  outline: unset;
  z-index: 2;
  border-color: #7c81d9;
  box-shadow: #7c81d9 0px 0px 0px 1px !important;
}

.c2::-webkit-input-placeholder {
  opacity: 0.6;
}

.c2::-moz-placeholder {
  opacity: 0.6;
}

.c2:-ms-input-placeholder {
  opacity: 0.6;
}

.c2::placeholder {
  opacity: 0.6;
}

<div
  class="c0 c1"
>
  <input
    aria-invalid="false"
    aria-required="false"
    class="c2 c3"
    type="text"
    value=""
  />
</div>
`;

exports[`renders correctly for a disabled input 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c1:focus:not(:focus-visible) {
  outline: none;
}

.c3 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
}

.c3:focus:not(:focus-visible) {
  outline: none;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.c2 {
  border: 1px solid #bdbdbd;
  box-shadow: inset 0px 1px 2px #e5e5e5;
  border-radius: 0.2em;
  height: 2.5em;
  width: 100%;
  padding: 0.4em 0.6em;
}

.c2[disabled] {
  background-color: #f2f2f2;
  box-shadow: unset;
  color: #8d8d8d;
}

.c2:focus {
  outline: unset;
  z-index: 2;
  border-color: #7c81d9;
  box-shadow: #7c81d9 0px 0px 0px 1px !important;
}

.c2::-webkit-input-placeholder {
  opacity: 0.6;
}

.c2::-moz-placeholder {
  opacity: 0.6;
}

.c2:-ms-input-placeholder {
  opacity: 0.6;
}

.c2::placeholder {
  opacity: 0.6;
}

<div
  class="c0 c1"
>
  <input
    aria-invalid="false"
    aria-required="false"
    class="c2 c3"
    disabled=""
    type="text"
    value=""
  />
</div>
`;

exports[`renders correctly for a full width input 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c1:focus:not(:focus-visible) {
  outline: none;
}

.c3 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
}

.c3:focus:not(:focus-visible) {
  outline: none;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  width: 100%;
}

.c2 {
  border: 1px solid #bdbdbd;
  box-shadow: inset 0px 1px 2px #e5e5e5;
  border-radius: 0.2em;
  height: 2.5em;
  width: 100%;
  padding: 0.4em 0.6em;
}

.c2[disabled] {
  background-color: #f2f2f2;
  box-shadow: unset;
  color: #8d8d8d;
}

.c2:focus {
  outline: unset;
  z-index: 2;
  border-color: #7c81d9;
  box-shadow: #7c81d9 0px 0px 0px 1px !important;
}

.c2::-webkit-input-placeholder {
  opacity: 0.6;
}

.c2::-moz-placeholder {
  opacity: 0.6;
}

.c2:-ms-input-placeholder {
  opacity: 0.6;
}

.c2::placeholder {
  opacity: 0.6;
}

.c2 {
  width: 100%;
}

<div
  class="c0 c1"
>
  <input
    aria-invalid="false"
    aria-required="false"
    class="c2 c3"
    type="text"
    value=""
  />
</div>
`;

exports[`renders correctly for an input with a after component 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c1:focus:not(:focus-visible) {
  outline: none;
}

.c7 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
}

.c7:focus:not(:focus-visible) {
  outline: none;
}

.c3 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c3:focus:not(:focus-visible) {
  outline: none;
}

.c3.c3.c3 {
  position: absolute;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c5 {
  fill: inherit;
  position: relative;
  font-size: 1em;
  height: 1em;
  width: 1em;
}

.c4 {
  fill: #708da8;
  height: 2.5em;
  margin: 0 0.75em;
  top: 0;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.c6 {
  border: 1px solid #bdbdbd;
  box-shadow: inset 0px 1px 2px #e5e5e5;
  border-radius: 0.2em;
  height: 2.5em;
  width: 100%;
  padding: 0.4em 0.6em;
}

.c6[disabled] {
  background-color: #f2f2f2;
  box-shadow: unset;
  color: #8d8d8d;
}

.c6:focus {
  outline: unset;
  z-index: 2;
  border-color: #7c81d9;
  box-shadow: #7c81d9 0px 0px 0px 1px !important;
}

.c6::-webkit-input-placeholder {
  opacity: 0.6;
}

.c6::-moz-placeholder {
  opacity: 0.6;
}

.c6:-ms-input-placeholder {
  opacity: 0.6;
}

.c6::placeholder {
  opacity: 0.6;
}

.c6 {
  padding-right: 2.3em;
}

<div
  class="c0 c1"
>
  <div
    class="c2 c3"
    style="right: 0px; z-index: 3;"
  >
    <svg
      class="c4 c5 c1"
      role="img"
      size="1"
      style="size: 1px;"
      viewBox="0 0 512 512"
    >
      <title>
        Search
      </title>
      <path
        d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
        fill="currentColor"
      />
    </svg>
  </div>
  <input
    aria-invalid="false"
    aria-required="false"
    class="c6 c7"
    type="text"
    value=""
  />
</div>
`;

exports[`renders correctly for an input with a before component 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c1:focus:not(:focus-visible) {
  outline: none;
}

.c7 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
}

.c7:focus:not(:focus-visible) {
  outline: none;
}

.c3 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c3:focus:not(:focus-visible) {
  outline: none;
}

.c3.c3.c3 {
  position: absolute;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c5 {
  fill: inherit;
  position: relative;
  font-size: 1em;
  height: 1em;
  width: 1em;
}

.c4 {
  fill: #708da8;
  height: 2.5em;
  margin: 0 0.75em;
  top: 0;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.c6 {
  border: 1px solid #bdbdbd;
  box-shadow: inset 0px 1px 2px #e5e5e5;
  border-radius: 0.2em;
  height: 2.5em;
  width: 100%;
  padding: 0.4em 0.6em;
}

.c6[disabled] {
  background-color: #f2f2f2;
  box-shadow: unset;
  color: #8d8d8d;
}

.c6:focus {
  outline: unset;
  z-index: 2;
  border-color: #7c81d9;
  box-shadow: #7c81d9 0px 0px 0px 1px !important;
}

.c6::-webkit-input-placeholder {
  opacity: 0.6;
}

.c6::-moz-placeholder {
  opacity: 0.6;
}

.c6:-ms-input-placeholder {
  opacity: 0.6;
}

.c6::placeholder {
  opacity: 0.6;
}

.c6 {
  padding-left: 2.3em;
}

<div
  class="c0 c1"
>
  <div
    class="c2 c3"
    style="z-index: 3;"
  >
    <svg
      class="c4 c5 c1"
      role="img"
      size="1"
      style="size: 1px;"
      viewBox="0 0 512 512"
    >
      <title>
        Search
      </title>
      <path
        d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
        fill="currentColor"
      />
    </svg>
  </div>
  <input
    aria-invalid="false"
    aria-required="false"
    class="c6 c7"
    type="text"
    value=""
  />
</div>
`;

exports[`renders correctly for an input with a default value 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c1:focus:not(:focus-visible) {
  outline: none;
}

.c3 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
}

.c3:focus:not(:focus-visible) {
  outline: none;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.c2 {
  border: 1px solid #bdbdbd;
  box-shadow: inset 0px 1px 2px #e5e5e5;
  border-radius: 0.2em;
  height: 2.5em;
  width: 100%;
  padding: 0.4em 0.6em;
}

.c2[disabled] {
  background-color: #f2f2f2;
  box-shadow: unset;
  color: #8d8d8d;
}

.c2:focus {
  outline: unset;
  z-index: 2;
  border-color: #7c81d9;
  box-shadow: #7c81d9 0px 0px 0px 1px !important;
}

.c2::-webkit-input-placeholder {
  opacity: 0.6;
}

.c2::-moz-placeholder {
  opacity: 0.6;
}

.c2:-ms-input-placeholder {
  opacity: 0.6;
}

.c2::placeholder {
  opacity: 0.6;
}

<div
  class="c0 c1"
>
  <input
    aria-invalid="false"
    aria-required="false"
    class="c2 c3"
    type="text"
    value="Awesome value"
  />
</div>
`;

exports[`renders correctly for an input with a placeholder 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c1:focus:not(:focus-visible) {
  outline: none;
}

.c3 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
}

.c3:focus:not(:focus-visible) {
  outline: none;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.c2 {
  border: 1px solid #bdbdbd;
  box-shadow: inset 0px 1px 2px #e5e5e5;
  border-radius: 0.2em;
  height: 2.5em;
  width: 100%;
  padding: 0.4em 0.6em;
}

.c2[disabled] {
  background-color: #f2f2f2;
  box-shadow: unset;
  color: #8d8d8d;
}

.c2:focus {
  outline: unset;
  z-index: 2;
  border-color: #7c81d9;
  box-shadow: #7c81d9 0px 0px 0px 1px !important;
}

.c2::-webkit-input-placeholder {
  opacity: 0.6;
}

.c2::-moz-placeholder {
  opacity: 0.6;
}

.c2:-ms-input-placeholder {
  opacity: 0.6;
}

.c2::placeholder {
  opacity: 0.6;
}

<div
  class="c0 c1"
>
  <input
    aria-invalid="false"
    aria-required="false"
    class="c2 c3"
    placeholder="Awesome placeholder"
    type="text"
    value=""
  />
</div>
`;

exports[`sizes renders correctly for an input with size large 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c1:focus:not(:focus-visible) {
  outline: none;
}

.c3 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
}

.c3:focus:not(:focus-visible) {
  outline: none;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.c0 {
  font-size: 1.5rem;
}

.c2 {
  border: 1px solid #bdbdbd;
  box-shadow: inset 0px 1px 2px #e5e5e5;
  border-radius: 0.2em;
  height: 2.5em;
  width: 100%;
  padding: 0.4em 0.6em;
}

.c2[disabled] {
  background-color: #f2f2f2;
  box-shadow: unset;
  color: #8d8d8d;
}

.c2:focus {
  outline: unset;
  z-index: 2;
  border-color: #7c81d9;
  box-shadow: #7c81d9 0px 0px 0px 1px !important;
}

.c2::-webkit-input-placeholder {
  opacity: 0.6;
}

.c2::-moz-placeholder {
  opacity: 0.6;
}

.c2:-ms-input-placeholder {
  opacity: 0.6;
}

.c2::placeholder {
  opacity: 0.6;
}

.c2 + .c4 {
  width: 25px;
  height: 25px;
  top: 16px;
  right: 12px;
}

<div
  class="c0 c1"
>
  <input
    aria-invalid="false"
    aria-required="false"
    class="c2 c3"
    type="text"
    value=""
  />
</div>
`;

exports[`sizes renders correctly for an input with size medium 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c1:focus:not(:focus-visible) {
  outline: none;
}

.c3 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
}

.c3:focus:not(:focus-visible) {
  outline: none;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.c0 {
  font-size: 1.25rem;
}

.c2 {
  border: 1px solid #bdbdbd;
  box-shadow: inset 0px 1px 2px #e5e5e5;
  border-radius: 0.2em;
  height: 2.5em;
  width: 100%;
  padding: 0.4em 0.6em;
}

.c2[disabled] {
  background-color: #f2f2f2;
  box-shadow: unset;
  color: #8d8d8d;
}

.c2:focus {
  outline: unset;
  z-index: 2;
  border-color: #7c81d9;
  box-shadow: #7c81d9 0px 0px 0px 1px !important;
}

.c2::-webkit-input-placeholder {
  opacity: 0.6;
}

.c2::-moz-placeholder {
  opacity: 0.6;
}

.c2:-ms-input-placeholder {
  opacity: 0.6;
}

.c2::placeholder {
  opacity: 0.6;
}

.c2 + .c4 {
  width: 20px;
  height: 20px;
  top: 15px;
  right: 10px;
}

<div
  class="c0 c1"
>
  <input
    aria-invalid="false"
    aria-required="false"
    class="c2 c3"
    type="text"
    value=""
  />
</div>
`;

exports[`sizes renders correctly for an input with size small 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c1:focus:not(:focus-visible) {
  outline: none;
}

.c3 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
}

.c3:focus:not(:focus-visible) {
  outline: none;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.c0 {
  font-size: 0.8rem;
}

.c2 {
  border: 1px solid #bdbdbd;
  box-shadow: inset 0px 1px 2px #e5e5e5;
  border-radius: 0.2em;
  height: 2.5em;
  width: 100%;
  padding: 0.4em 0.6em;
}

.c2[disabled] {
  background-color: #f2f2f2;
  box-shadow: unset;
  color: #8d8d8d;
}

.c2:focus {
  outline: unset;
  z-index: 2;
  border-color: #7c81d9;
  box-shadow: #7c81d9 0px 0px 0px 1px !important;
}

.c2::-webkit-input-placeholder {
  opacity: 0.6;
}

.c2::-moz-placeholder {
  opacity: 0.6;
}

.c2:-ms-input-placeholder {
  opacity: 0.6;
}

.c2::placeholder {
  opacity: 0.6;
}

.c2 + .c4 {
  width: 10px;
  height: 10px;
  top: 10px;
}

<div
  class="c0 c1"
>
  <input
    aria-invalid="false"
    aria-required="false"
    class="c2 c3"
    type="text"
    value=""
  />
</div>
`;

exports[`states renders correctly for an input with state danger 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c1:focus:not(:focus-visible) {
  outline: none;
}

.c3 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
}

.c3:focus:not(:focus-visible) {
  outline: none;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.c2 {
  border: 1px solid #bdbdbd;
  box-shadow: inset 0px 1px 2px #e5e5e5;
  border-radius: 0.2em;
  height: 2.5em;
  width: 100%;
  padding: 0.4em 0.6em;
}

.c2[disabled] {
  background-color: #f2f2f2;
  box-shadow: unset;
  color: #8d8d8d;
}

.c2:focus {
  outline: unset;
  z-index: 2;
  border-color: #7c81d9;
  box-shadow: #7c81d9 0px 0px 0px 1px !important;
}

.c2::-webkit-input-placeholder {
  opacity: 0.6;
}

.c2::-moz-placeholder {
  opacity: 0.6;
}

.c2:-ms-input-placeholder {
  opacity: 0.6;
}

.c2::placeholder {
  opacity: 0.6;
}

.c2 {
  border-color: #d97c82;
  box-shadow: #d97c82 0px 0px 0px 1px !important;
}

<div
  class="c0 c1"
>
  <input
    aria-invalid="true"
    aria-required="false"
    class="c2 c3"
    type="text"
    value=""
  />
</div>
`;

exports[`states renders correctly for an input with state primary 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c1:focus:not(:focus-visible) {
  outline: none;
}

.c3 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
}

.c3:focus:not(:focus-visible) {
  outline: none;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.c2 {
  border: 1px solid #bdbdbd;
  box-shadow: inset 0px 1px 2px #e5e5e5;
  border-radius: 0.2em;
  height: 2.5em;
  width: 100%;
  padding: 0.4em 0.6em;
}

.c2[disabled] {
  background-color: #f2f2f2;
  box-shadow: unset;
  color: #8d8d8d;
}

.c2:focus {
  outline: unset;
  z-index: 2;
  border-color: #7c81d9;
  box-shadow: #7c81d9 0px 0px 0px 1px !important;
}

.c2::-webkit-input-placeholder {
  opacity: 0.6;
}

.c2::-moz-placeholder {
  opacity: 0.6;
}

.c2:-ms-input-placeholder {
  opacity: 0.6;
}

.c2::placeholder {
  opacity: 0.6;
}

.c2 {
  border-color: #7c81d9;
  box-shadow: #7c81d9 0px 0px 0px 1px !important;
}

<div
  class="c0 c1"
>
  <input
    aria-invalid="false"
    aria-required="false"
    class="c2 c3"
    type="text"
    value=""
  />
</div>
`;

exports[`states renders correctly for an input with state success 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c1:focus:not(:focus-visible) {
  outline: none;
}

.c3 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
}

.c3:focus:not(:focus-visible) {
  outline: none;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.c2 {
  border: 1px solid #bdbdbd;
  box-shadow: inset 0px 1px 2px #e5e5e5;
  border-radius: 0.2em;
  height: 2.5em;
  width: 100%;
  padding: 0.4em 0.6em;
}

.c2[disabled] {
  background-color: #f2f2f2;
  box-shadow: unset;
  color: #8d8d8d;
}

.c2:focus {
  outline: unset;
  z-index: 2;
  border-color: #7c81d9;
  box-shadow: #7c81d9 0px 0px 0px 1px !important;
}

.c2::-webkit-input-placeholder {
  opacity: 0.6;
}

.c2::-moz-placeholder {
  opacity: 0.6;
}

.c2:-ms-input-placeholder {
  opacity: 0.6;
}

.c2::placeholder {
  opacity: 0.6;
}

.c2 {
  border-color: #6ba886;
  box-shadow: #6ba886 0px 0px 0px 1px !important;
}

<div
  class="c0 c1"
>
  <input
    aria-invalid="false"
    aria-required="false"
    class="c2 c3"
    type="text"
    value=""
  />
</div>
`;

exports[`states renders correctly for an input with state warning 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c1:focus:not(:focus-visible) {
  outline: none;
}

.c3 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
}

.c3:focus:not(:focus-visible) {
  outline: none;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.c2 {
  border: 1px solid #bdbdbd;
  box-shadow: inset 0px 1px 2px #e5e5e5;
  border-radius: 0.2em;
  height: 2.5em;
  width: 100%;
  padding: 0.4em 0.6em;
}

.c2[disabled] {
  background-color: #f2f2f2;
  box-shadow: unset;
  color: #8d8d8d;
}

.c2:focus {
  outline: unset;
  z-index: 2;
  border-color: #7c81d9;
  box-shadow: #7c81d9 0px 0px 0px 1px !important;
}

.c2::-webkit-input-placeholder {
  opacity: 0.6;
}

.c2::-moz-placeholder {
  opacity: 0.6;
}

.c2:-ms-input-placeholder {
  opacity: 0.6;
}

.c2::placeholder {
  opacity: 0.6;
}

.c2 {
  border-color: #f5bd4c;
  box-shadow: #f5bd4c 0px 0px 0px 1px !important;
}

<div
  class="c0 c1"
>
  <input
    aria-invalid="false"
    aria-required="false"
    class="c2 c3"
    type="text"
    value=""
  />
</div>
`;

exports[`types renders correctly for an input with type date 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c1:focus:not(:focus-visible) {
  outline: none;
}

.c3 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
}

.c3:focus:not(:focus-visible) {
  outline: none;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.c2 {
  border: 1px solid #bdbdbd;
  box-shadow: inset 0px 1px 2px #e5e5e5;
  border-radius: 0.2em;
  height: 2.5em;
  width: 100%;
  padding: 0.4em 0.6em;
}

.c2[disabled] {
  background-color: #f2f2f2;
  box-shadow: unset;
  color: #8d8d8d;
}

.c2:focus {
  outline: unset;
  z-index: 2;
  border-color: #7c81d9;
  box-shadow: #7c81d9 0px 0px 0px 1px !important;
}

.c2::-webkit-input-placeholder {
  opacity: 0.6;
}

.c2::-moz-placeholder {
  opacity: 0.6;
}

.c2:-ms-input-placeholder {
  opacity: 0.6;
}

.c2::placeholder {
  opacity: 0.6;
}

<div
  class="c0 c1"
>
  <input
    aria-invalid="false"
    aria-required="false"
    class="c2 c3"
    type="date"
    value=""
  />
</div>
`;

exports[`types renders correctly for an input with type email 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c1:focus:not(:focus-visible) {
  outline: none;
}

.c3 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
}

.c3:focus:not(:focus-visible) {
  outline: none;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.c2 {
  border: 1px solid #bdbdbd;
  box-shadow: inset 0px 1px 2px #e5e5e5;
  border-radius: 0.2em;
  height: 2.5em;
  width: 100%;
  padding: 0.4em 0.6em;
}

.c2[disabled] {
  background-color: #f2f2f2;
  box-shadow: unset;
  color: #8d8d8d;
}

.c2:focus {
  outline: unset;
  z-index: 2;
  border-color: #7c81d9;
  box-shadow: #7c81d9 0px 0px 0px 1px !important;
}

.c2::-webkit-input-placeholder {
  opacity: 0.6;
}

.c2::-moz-placeholder {
  opacity: 0.6;
}

.c2:-ms-input-placeholder {
  opacity: 0.6;
}

.c2::placeholder {
  opacity: 0.6;
}

<div
  class="c0 c1"
>
  <input
    aria-invalid="false"
    aria-required="false"
    class="c2 c3"
    type="email"
    value=""
  />
</div>
`;

exports[`types renders correctly for an input with type number 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c1:focus:not(:focus-visible) {
  outline: none;
}

.c3 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
}

.c3:focus:not(:focus-visible) {
  outline: none;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.c2 {
  border: 1px solid #bdbdbd;
  box-shadow: inset 0px 1px 2px #e5e5e5;
  border-radius: 0.2em;
  height: 2.5em;
  width: 100%;
  padding: 0.4em 0.6em;
}

.c2[disabled] {
  background-color: #f2f2f2;
  box-shadow: unset;
  color: #8d8d8d;
}

.c2:focus {
  outline: unset;
  z-index: 2;
  border-color: #7c81d9;
  box-shadow: #7c81d9 0px 0px 0px 1px !important;
}

.c2::-webkit-input-placeholder {
  opacity: 0.6;
}

.c2::-moz-placeholder {
  opacity: 0.6;
}

.c2:-ms-input-placeholder {
  opacity: 0.6;
}

.c2::placeholder {
  opacity: 0.6;
}

<div
  class="c0 c1"
>
  <input
    aria-invalid="false"
    aria-required="false"
    class="c2 c3"
    type="number"
    value=""
  />
</div>
`;

exports[`types renders correctly for an input with type password 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c1:focus:not(:focus-visible) {
  outline: none;
}

.c3 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
}

.c3:focus:not(:focus-visible) {
  outline: none;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.c2 {
  border: 1px solid #bdbdbd;
  box-shadow: inset 0px 1px 2px #e5e5e5;
  border-radius: 0.2em;
  height: 2.5em;
  width: 100%;
  padding: 0.4em 0.6em;
}

.c2[disabled] {
  background-color: #f2f2f2;
  box-shadow: unset;
  color: #8d8d8d;
}

.c2:focus {
  outline: unset;
  z-index: 2;
  border-color: #7c81d9;
  box-shadow: #7c81d9 0px 0px 0px 1px !important;
}

.c2::-webkit-input-placeholder {
  opacity: 0.6;
}

.c2::-moz-placeholder {
  opacity: 0.6;
}

.c2:-ms-input-placeholder {
  opacity: 0.6;
}

.c2::placeholder {
  opacity: 0.6;
}

<div
  class="c0 c1"
>
  <input
    aria-invalid="false"
    aria-required="false"
    class="c2 c3"
    type="password"
    value=""
  />
</div>
`;

exports[`types renders correctly for an input with type search 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c1:focus:not(:focus-visible) {
  outline: none;
}

.c3 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
}

.c3:focus:not(:focus-visible) {
  outline: none;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.c2 {
  border: 1px solid #bdbdbd;
  box-shadow: inset 0px 1px 2px #e5e5e5;
  border-radius: 0.2em;
  height: 2.5em;
  width: 100%;
  padding: 0.4em 0.6em;
}

.c2[disabled] {
  background-color: #f2f2f2;
  box-shadow: unset;
  color: #8d8d8d;
}

.c2:focus {
  outline: unset;
  z-index: 2;
  border-color: #7c81d9;
  box-shadow: #7c81d9 0px 0px 0px 1px !important;
}

.c2::-webkit-input-placeholder {
  opacity: 0.6;
}

.c2::-moz-placeholder {
  opacity: 0.6;
}

.c2:-ms-input-placeholder {
  opacity: 0.6;
}

.c2::placeholder {
  opacity: 0.6;
}

<div
  class="c0 c1"
>
  <input
    aria-invalid="false"
    aria-required="false"
    class="c2 c3"
    type="search"
    value=""
  />
</div>
`;

exports[`types renders correctly for an input with type tel 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c1:focus:not(:focus-visible) {
  outline: none;
}

.c3 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
}

.c3:focus:not(:focus-visible) {
  outline: none;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.c2 {
  border: 1px solid #bdbdbd;
  box-shadow: inset 0px 1px 2px #e5e5e5;
  border-radius: 0.2em;
  height: 2.5em;
  width: 100%;
  padding: 0.4em 0.6em;
}

.c2[disabled] {
  background-color: #f2f2f2;
  box-shadow: unset;
  color: #8d8d8d;
}

.c2:focus {
  outline: unset;
  z-index: 2;
  border-color: #7c81d9;
  box-shadow: #7c81d9 0px 0px 0px 1px !important;
}

.c2::-webkit-input-placeholder {
  opacity: 0.6;
}

.c2::-moz-placeholder {
  opacity: 0.6;
}

.c2:-ms-input-placeholder {
  opacity: 0.6;
}

.c2::placeholder {
  opacity: 0.6;
}

<div
  class="c0 c1"
>
  <input
    aria-invalid="false"
    aria-required="false"
    class="c2 c3"
    type="tel"
    value=""
  />
</div>
`;

exports[`types renders correctly for an input with type time 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c1:focus:not(:focus-visible) {
  outline: none;
}

.c3 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
}

.c3:focus:not(:focus-visible) {
  outline: none;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.c2 {
  border: 1px solid #bdbdbd;
  box-shadow: inset 0px 1px 2px #e5e5e5;
  border-radius: 0.2em;
  height: 2.5em;
  width: 100%;
  padding: 0.4em 0.6em;
}

.c2[disabled] {
  background-color: #f2f2f2;
  box-shadow: unset;
  color: #8d8d8d;
}

.c2:focus {
  outline: unset;
  z-index: 2;
  border-color: #7c81d9;
  box-shadow: #7c81d9 0px 0px 0px 1px !important;
}

.c2::-webkit-input-placeholder {
  opacity: 0.6;
}

.c2::-moz-placeholder {
  opacity: 0.6;
}

.c2:-ms-input-placeholder {
  opacity: 0.6;
}

.c2::placeholder {
  opacity: 0.6;
}

<div
  class="c0 c1"
>
  <input
    aria-invalid="false"
    aria-required="false"
    class="c2 c3"
    type="time"
    value=""
  />
</div>
`;

exports[`types renders correctly for an input with type url 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c1:focus:not(:focus-visible) {
  outline: none;
}

.c3 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
}

.c3:focus:not(:focus-visible) {
  outline: none;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.c2 {
  border: 1px solid #bdbdbd;
  box-shadow: inset 0px 1px 2px #e5e5e5;
  border-radius: 0.2em;
  height: 2.5em;
  width: 100%;
  padding: 0.4em 0.6em;
}

.c2[disabled] {
  background-color: #f2f2f2;
  box-shadow: unset;
  color: #8d8d8d;
}

.c2:focus {
  outline: unset;
  z-index: 2;
  border-color: #7c81d9;
  box-shadow: #7c81d9 0px 0px 0px 1px !important;
}

.c2::-webkit-input-placeholder {
  opacity: 0.6;
}

.c2::-moz-placeholder {
  opacity: 0.6;
}

.c2:-ms-input-placeholder {
  opacity: 0.6;
}

.c2::placeholder {
  opacity: 0.6;
}

<div
  class="c0 c1"
>
  <input
    aria-invalid="false"
    aria-required="false"
    class="c2 c3"
    type="url"
    value=""
  />
</div>
`;
